[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://components/ui/user_login_card_ui.gd" id="1"]
[ext_resource type="PackedScene" path="res://components/portrait/portrait_view.tscn" id="2"]

[node name="UserLoginCardUI" type="PanelContainer"]
custom_minimum_size = Vector2(220, 160)
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NetWorthLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
horizontal_alignment = 1
text = "$0"

[node name="InfoHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ProfilePic" parent="MarginContainer/VBox/InfoHBox" instance=ExtResource("2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
size_flags_horizontal = 4
size_flags_vertical = 4
clip_contents = true
portrait_creator_enabled = false

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/VBox/InfoHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="MarginContainer/VBox/InfoHBox/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "Name"

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBox/InfoHBox/InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.716, 0.716, 0.716, 1)
horizontal_alignment = 1
text = "@username"

[node name="PasswordLineEdit" type="LineEdit" parent="MarginContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 35)
size_flags_horizontal = 4
editable = false
secret = true
secret_character = "‚óè"

[node name="LogInButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Lock in"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MarginContainer/VBox/LogInButton" to="." method="_on_log_in_button_pressed"]
